--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <script src="http://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyA2g-6DqbdtnLJ3rhQSMSIThvR8MAO4tHI"></script>
+
 </head>
 <body>
   <app-root></app-root>
