--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900&amp;amp;subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 
   <script src="http://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyA2g-6DqbdtnLJ3rhQSMSIThvR8MAO4tHI"></script>
 
